fix: equalizer showing behind pause button

--- a/src/user.css
+++ b/src/user.css
@@ -491,6 +491,10 @@ div#context-menu > .main-userWidget-dropDownMenu::before,
   display: none !important;
 }
 
+.view-homeShortcutsGrid-equaliser {
+  opacity: 0;
+}
+
 .home-icon {
   -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_home_24_regular.svg');
   background-color: var(--spice-subtext) !important;
